MDEV-35955 Wrong result for UPDATE ... ORDER BY LIMIT using tmp.table

Queries of the form
  UPDATE t1.*, t2.* ORDER BY t1.col1, t2.col2, ... LIMIT N;
now correctly sort first by t1.col, then by t2.col2.  Previously,
such queries would, when more than one ORDER BY column was specified,
incorrectly sort the columns from the input tables; as an example, when
two ORDER BY columns were specified, the sorting would first be by t2.col2
and then by t1.col1, updating more rows from the first table than the
second.